// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxGroup custom theme 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 gyimNE"
>
  <div
    class="StyledBox-sc-13pk1d4-0 bmcRsV StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gbOEjG"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup defaultValue renders 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gyimNE"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dxPtNT StyledCheckBoxGroup-sc-2nhc5d-0"
      role="group"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
        >
          <input
            checked=""
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 iDmIbZ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
          >
            <svg
              class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 fDftKs"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          First
        </span>
      </label>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jMOWYd"
      />
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
          />
        </div>
        <span>
          Second
        </span>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckBoxGroup disabled renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 gyimNE"
>
  <div
    class="StyledBox-sc-13pk1d4-0 dxPtNT StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 dPGWVZ"
      disabled=""
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 fIcuvS"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jMOWYd"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 dPGWVZ"
      disabled=""
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 fIcuvS"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
          disabled=""
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
  <div
    class="StyledBox-sc-13pk1d4-0 dxPtNT StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 dPGWVZ"
      disabled=""
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 fIcuvS"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
  </div>
  <div
    class="StyledBox-sc-13pk1d4-0 dxPtNT StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 dPGWVZ"
      disabled=""
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 fIcuvS"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup initial value renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 gyimNE"
>
  <div
    class="StyledBox-sc-13pk1d4-0 dxPtNT StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
        />
      </div>
      <span>
        Maui
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jMOWYd"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 iDmIbZ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 fDftKs"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        Jerusalem
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jMOWYd"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 iDmIbZ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 fDftKs"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        Wuhan
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup labelKey 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 gyimNE"
>
  <div
    class="StyledBox-sc-13pk1d4-0 dxPtNT StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jMOWYd"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onChange 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 gyimNE"
>
  <div
    class="StyledBox-sc-13pk1d4-0 dxPtNT StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 iDmIbZ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 fDftKs"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jMOWYd"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onClick for check and uncheck a CheckBox 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 gyimNE"
>
  <div
    class="StyledBox-sc-13pk1d4-0 hfHOtj StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
    tabindex="0"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 iDmIbZ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 fDftKs"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jMOWYd"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onClick for check and uncheck a CheckBox 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 gyimNE"
>
  <div
    class="StyledBox-sc-13pk1d4-0 hfHOtj StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
    tabindex="0"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jMOWYd"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup options renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 gyimNE"
>
  <div
    class="StyledBox-sc-13pk1d4-0 dxPtNT StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
        />
      </div>
      <span>
        First
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jMOWYd"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup renders without grommet wrapper 1`] = `
<div
  class="StyledBox-sc-13pk1d4-0 dxPtNT StyledCheckBoxGroup-sc-2nhc5d-0"
  role="group"
>
  <label
    class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
    >
      <input
        class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
        type="checkbox"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
      />
    </div>
    <span>
      First
    </span>
  </label>
  <div
    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jMOWYd"
  />
  <label
    class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
    >
      <input
        class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
        type="checkbox"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
      />
    </div>
    <span>
      Second
    </span>
  </label>
</div>
`;

exports[`CheckBoxGroup value renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 gyimNE"
>
  <div
    class="StyledBox-sc-13pk1d4-0 dxPtNT StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 iDmIbZ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 fDftKs"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        First
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jMOWYd"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup valueKey 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 gyimNE"
>
  <div
    class="StyledBox-sc-13pk1d4-0 dxPtNT StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jMOWYd"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 czLRXY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jWuWAm StyledCheckBox-sc-1dbk5ju-6 fwVbWb"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dzITxe"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fveUEp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 joEFRH"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;
